fixed bug on small mobile size

--- a/css/style.scss
+++ b/css/style.scss
@@ -80,7 +80,7 @@
   }
   .whyUs {
     text-align: center;
-    padding-top: 7rem;
+    padding-top: 0rem;
     @include flex($justify: center);
     .container {
       margin: 0;
